# leafal-cli

./: .env  Cargo.toml
src/: main.rs
