[package]
name = "leafal-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
confy = "0.5.1"
dirs = "5.0.1"
dotenv = "0.15.0"
rpassword = "7.3.1"
serde = "1.0.193"
surrealdb = "1.0.2"
tokio = "1.35.1"
